Update pkg desc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "msgpass"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
-description = "Rust thin wrapper to a Message Passing Interface (MPI)"
+description = "Thin wrapper to a Message Passing Interface (MPI)"
 homepage = "https://github.com/cpmech/msgpass"
 repository = "https://github.com/cpmech/msgpass"
 documentation = "https://docs.rs/msgpass"
