--- a/.github/workflows/test_on_linux.yml
+++ b/.github/workflows/test_on_linux.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install Libraries
+      - name: Install libraries
         run: |
           sudo apt-get update -y && sudo apt-get install -y build-essential libopenmpi-dev
       - name: Run tests
