--- a/.github/workflows/test_on_linux.yml
+++ b/.github/workflows/test_on_linux.yml
@@ -12,6 +12,8 @@ jobs:
         run: |
           sudo apt-get update -y && sudo apt-get install -y build-essential ${{ matrix.mpi-lib }}
       - name: Run tests
+        env:
+          MSGPASS_USE_MPICH: 1
         run: |
           bash run-tests.bash
 
