--- a/.github/workflows/test_on_linux.yml
+++ b/.github/workflows/test_on_linux.yml
@@ -11,10 +11,10 @@ jobs:
       - name: Install libraries
         run: |
           sudo apt-get update -y && sudo apt-get install -y build-essential ${{ matrix.mpi-lib }}
-      - name: Set env var
+      - name: Setup environment variable
         if: runner.mpi-lib == 'libmpich-dev'
-        env:
-          MSGPASS_USE_MPICH: 1
+        run: |
+          export MSGPASS_USE_MPICH=1
       - name: Run tests
         run: |
           bash run-tests.bash
