--- a/.github/workflows/test_on_linux.yml
+++ b/.github/workflows/test_on_linux.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install libraries
         run: |
-          sudo apt-get update -y && sudo apt-get install -y build-essential ${{ matrix.mpi-lib }}
+          sudo apt-get update -y && sudo apt-get install -y build-essential ${{ matrix.mpi_lib }}
       - name: Set environment variables up
         if: runner.mpi_lib == 'libmpich-dev'
         run: |
