--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ categories = ["science"]
 keywords = ["parallel", "cluster", "MPI"]
 
 [dependencies]
+num-complex = "0.4"
 
 [build-dependencies]
 cc = "1.0"
