--- a/.github/workflows/test_on_linux_intel_mpi.yml
+++ b/.github/workflows/test_on_linux_intel_mpi.yml
@@ -10,5 +10,6 @@ jobs:
           bash zscripts/install-intel-mpi-debian.bash
       - name: Run tests
         run: |
-          export MSGPASS_USE_INTEL_MKL=1
+          source /opt/intel/oneapi/setvars.sh
+          export MSGPASS_USE_INTEL_MPI=1
           bash run-tests.bash
