--- a/.github/workflows/test_on_linux.yml
+++ b/.github/workflows/test_on_linux.yml
@@ -8,9 +8,9 @@ jobs:
       matrix:
         include:
           - mpi_lib: libopenmpi-dev
-            flag: 0
+            feature: ""
           - mpi_lib: libmpich-dev
-            flag: 1
+            feature: "mpich"
     steps:
       - uses: actions/checkout@v4
       - name: Install libraries
@@ -18,5 +18,4 @@ jobs:
           sudo apt-get update -y && sudo apt-get install -y build-essential ${{ matrix.mpi_lib }}
       - name: Run tests
         run: |
-          export MSGPASS_USE_MPICH=${{ matrix.flag }}
-          bash run-tests.bash
+          bash run-tests.bash ${{ matrix.feature }}
