Try to find mpi.h on macOS

--- a/.github/workflows/test_on_macos.yml
+++ b/.github/workflows/test_on_macos.yml
@@ -17,5 +17,7 @@ jobs:
           brew install open-mpi
       - name: Run tests
         run: |
+          find / -iname "mpi.h"
+          find / -iname "*mpi.so*"
           bash run-tests.bash
 
